--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
 <div class="page">
 <h1>Our Projects</h1>
 <ul style="margin-top:1rem;">
-<li>Cyber Portfolio Website</li>
+<li>MR NETWORK ( MINECRAFT SERVER )</li>
 <li>Tech Startup Landing Page</li>
 <li>Minimal Dashboard UI</li>
 <li>Creator Personal Brand Site</li>
