--- a/forums/9554123/index.html
+++ b/forums/9554123/index.html
@@ -184,7 +184,7 @@
 
 <div class="container">
     <div class="breadcrumb">
-        <a href="#">الرئيسية</a> » <a href="./fourms">المنتديات</a> » <a href="#">قسم الأخبار</a>
+        <a href="#">الرئيسية</a> » <a href="../fourms">المنتديات</a> » <a href="#">قسم الأخبار</a>
     </div>
 
     <h1>تحديثات سيرفر السرفايفل v2.1</h1>
@@ -250,4 +250,5 @@
 </body>
 
 </html>
+
 
