Fix HTML encoding issues in index.html

--- a/forums/9856210/index.html
+++ b/forums/9856210/index.html
@@ -184,7 +184,7 @@
 
 <div class="container">
     <div class="breadcrumb">
-        <a href="#">الرئيسية</a> » <a href="./fourms">المنتديات</a> » <a href="#">قسم الأخبار</a>
+        <a href="#">الرئيسية</a> » <a href="../fourms">المنتديات</a> » <a href="#">قسم الأخبار</a>
     </div>
 
     <h1>تحديثات سيرفر السرفايفل v2.2</h1>
@@ -234,4 +234,5 @@
 </body>
 
 </html>
+
 
